Remove mac specific tmux config from general

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,3 @@
-# rebind to gui
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-
 # https://wiki.archlinux.org/index.php/Tmux
 # http://mutelight.org/articles/practical-tmux
 # Rebind prefix to C-a
@@ -87,13 +84,18 @@ bind -t vi-copy y copy-selection
 bind -t vi-copy Escape cancel
 unbind p
 bind p paste-buffer
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 
 # keybindings to make resizing easier
 bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
+
+# keybindings to move directionally between panes
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # source file
 bind -r R source-file ~/.tmux.conf
