Move git aliases more into gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,8 +4,10 @@
 [merge]
 	tool = vimdiff
 [diff]
-        external = git_diff_vim_wrapper
+        #external = git_diff_vim_wrapper
         color = auto
 [alias]
         gr = log --graph --full-history --all --color --pretty=format:"%x1b[31m%h%x09%x1b[32m%d%x1b[0m%x20%s"
-
+        lg = log --graph --all --decorate --oneline
+        co = checkout
+        st = status
