Move .tmux-conf to tmux.conf

--- a/tmux/.tmux-osx.conf
+++ b/tmux/.tmux-osx.conf
@@ -1,4 +1,4 @@
-source-file ~/.dotfiles/tmux/.tmux.conf
+source-file ~/.dotfiles/tmux/tmux.conf
 
 # rebind to gui
 set-option -g default-command "reattach-to-user-namespace -l zsh"
