--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -19,7 +19,7 @@ set-option -sg escape-time 0
 # Number windows starting from 1
 set -g base-index 1
 
-set-option -g history-limit 10000
+set-option -g history-limit 100000
 
 set-option -g message-limit 50
 
@@ -37,11 +37,17 @@ set -g visual-activity on
 set-window-option -g aggressive-resize on
 
 # Status bar
-set -g status-utf8 on
-set -g status-interval 5
-set -g status-left "#[bg=colour235,bold]#(whoami)#[default] "
-# "#[fg=green]#[default]"
-set -g status-right "#[bg=colour235,bold]#H %Y-%m-%d %H:%M#[default]"
+set-option -g status on
+set-option -g status-interval 5
+set-option -g status-utf8 on
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+#set-option -g status-left "#[bg=colour235,bold]#(whoami)#[default] "
+## "#[fg=green]#[default]"
+#set-option -g status-right "#[bg=colour235,bold]#H %Y-%m-%d %H:%M#[default]"
+set-option -g status-left "#(~/.dotfiles/tmux/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/.dotfiles/tmux/tmux-powerline/powerline.sh right)"
 
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors.conf
 
@@ -90,6 +96,12 @@ bind -r C-h resize-pane -L
 bind -r C-j resize-pane -D
 bind -r C-k resize-pane -U
 bind -r C-l resize-pane -R
+
+# keybindings to swap panes directionally
+bind-key M-H swap-pane -L
+bind-key M-J swap-pane -D
+bind-key M-K swap-pane -U
+bind-key M-L swap-pane -R
 
 # keybindings to move directionally between panes
 bind-key h select-pane -L
