--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,8 @@ set -g base-index 1
 
 set-option -g history-limit 100000
 
+set-window-option -g alternate-screen on
+
 set-option -g message-limit 50
 
 set-option -g mode-mouse on
@@ -35,6 +37,10 @@ set -g visual-activity on
 
 # Aggressively resize the window if two clients are using
 set-window-option -g aggressive-resize on
+
+# Useability
+set-option -g mode-keys vi
+set-option -g status-keys vi
 
 # Status bar
 set-option -g status on
@@ -61,7 +67,7 @@ set-window-option -g window-status-fg colour244
 set-window-option -g window-status-bg default
 #set-window-option -g window-status-attr dim
 set-option -g window-status-format "#[fg=colour59]#I #W#F#[fg=colour232]/"
-set-option -g window-status-current-format "#[fg=colour81, bg=colour20]#I #W#F#[fg=colour16, bg=default]/"
+set-option -g window-status-current-format "#[fg=colour80, bg=colour19]#I #W#F#[fg=colour16, bg=default]/"
 
 # active window title colors
 set-window-option -g window-status-current-fg colour166 #orange
@@ -92,16 +98,27 @@ unbind p
 bind p paste-buffer
 
 # keybindings to make resizing easier
-bind -r C-h resize-pane -L
-bind -r C-j resize-pane -D
-bind -r C-k resize-pane -U
-bind -r C-l resize-pane -R
+bind -r C-h resize-pane -L 1
+bind -r C-j resize-pane -D 1
+bind -r C-k resize-pane -U 1
+bind -r C-l resize-pane -R 1
+bind -r S-C-H resize-pane -L 10
+bind -r S-C-J resize-pane -D 10
+bind -r S-C-K resize-pane -U 10
+bind -r S-C-L resize-pane -R 10
 
 # keybindings to swap panes directionally
-bind-key M-H swap-pane -L
-bind-key M-J swap-pane -D
-bind-key M-K swap-pane -U
-bind-key M-L swap-pane -R
+bind -n C-M-h run-shell "tmux-swap-direction -L"
+bind -n C-M-j run-shell "tmux-swap-direction -D"
+bind -n C-M-k run-shell "tmux-swap-direction -U"
+bind -n C-M-l run-shell "tmux-swap-direction -R"
+
+# smart pane switching with awareness of vim splits
+#bind -n C-y run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-u run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-i run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-o run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # keybindings to move directionally between panes
 bind-key h select-pane -L
@@ -110,4 +127,15 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # source file
-bind -r R source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf
+
+# clear window name
+# use with stty sane
+bind T rename-window "sane"
+
+# If tmux sees more than trigger# C0 control chars (backspace, linefeed,
+# carriage return) in 1ms, defer updates to pane for interval# ms.
+#set-option -g c0-change-trigger 250
+#set-option -g c0-change-interval 100
+set-option -g c0-change-trigger 10
+set-option -g c0-change-interval 500
