Split tmux conf, use tpm, some vim navigation parts pending use of titlestring

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,15 +1,24 @@
+# Docs:
 # https://wiki.archlinux.org/index.php/Tmux
-# http://mutelight.org/articles/practical-tmux
-# Rebind prefix to C-a
-set-option -g prefix C-a
-
-bind-key C-a last-window
-bind-key C-c new-window
-bind-key Tab select-pane -t :.+
-# 'a' will send the prefix to a nested multiplexer
-bind-key a send-prefix
-bind-key / list-commands
 # bind-key -n attaches binding without prefix
+#
+# Based on:
+# http://mutelight.org/articles/practical-tmux
+# https://github.com/olalonde/dotfiles/blob/master/tmux.conf
+
+# Rebind prefix
+set-option -g prefix C-Space
+unbind-key C-b
+# nested multiplexers should have a different prefix, e.g. C-a
+
+bind-key C-c new-window
+
+# Cycle next pane
+bind-key C-Tab select-pane -t :.+
+# toggle panes
+bind-key C-Space last-window
+
+bind-key / list-commands
 # http://stackoverflow.com/questions/10543684/how-can-i-clear-scrollback-buffer-in-tmux
 bind-key -n C-k clear-history
 
@@ -18,6 +27,7 @@ set-option -sg escape-time 0
 
 # Number windows starting from 1
 set -g base-index 1
+set-window-option -g pane-base-index 1
 
 set-option -g history-limit 100000
 
@@ -25,11 +35,16 @@ set-window-option -g alternate-screen on
 
 set-option -g message-limit 50
 
+# mouse
 set-option -g mode-mouse on
 set-window-option -g mouse-select-window on
 set-window-option -g mouse-select-pane on
+set-window-option -g mouse-resize-pane on
+
+# be quiet
 set-option -g visual-bell on
 set-option -g set-titles on
+bind-key x kill-pane
 
 # Activity monitoring
 setw -g monitor-activity on
@@ -42,53 +57,6 @@ set-window-option -g aggressive-resize on
 set-option -g mode-keys vi
 set-option -g status-keys vi
 
-# Status bar
-set-option -g status on
-set-option -g status-interval 5
-set-option -g status-utf8 on
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 90
-#set-option -g status-left "#[bg=colour235,bold]#(whoami)#[default] "
-## "#[fg=green]#[default]"
-#set-option -g status-right "#[bg=colour235,bold]#H %Y-%m-%d %H:%M#[default]"
-set-option -g status-left "#(~/.dotfiles/tmux/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.dotfiles/tmux/tmux-powerline/powerline.sh right)"
-
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors.conf
-
-# default statusbar colors
-set-option -g status-bg colour233 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-set-option -g window-status-format "#[fg=colour59]#I #W#F#[fg=colour232]/"
-set-option -g window-status-current-format "#[fg=colour80, bg=colour19]#I #W#F#[fg=colour16, bg=default]/"
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour237 #base02
-set-option -g pane-active-border-fg colour32 #base01
-
-# message text
-set-option -g message-bg colour232 #base02
-set-option -g message-fg colour32 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
 # vi-like copy mode
 set-window-option -g mode-keys vi
 bind -t vi-copy v begin-selection
@@ -97,37 +65,8 @@ bind -t vi-copy Escape cancel
 unbind p
 bind p paste-buffer
 
-# keybindings to make resizing easier
-bind -r C-h resize-pane -L 1
-bind -r C-j resize-pane -D 1
-bind -r C-k resize-pane -U 1
-bind -r C-l resize-pane -R 1
-bind -r S-C-H resize-pane -L 10
-bind -r S-C-J resize-pane -D 10
-bind -r S-C-K resize-pane -U 10
-bind -r S-C-L resize-pane -R 10
-
-# keybindings to swap panes directionally
-bind -n C-M-h run-shell "tmux-swap-direction -L"
-bind -n C-M-j run-shell "tmux-swap-direction -D"
-bind -n C-M-k run-shell "tmux-swap-direction -U"
-bind -n C-M-l run-shell "tmux-swap-direction -R"
-
-# smart pane switching with awareness of vim splits
-#bind -n C-y run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-#bind -n C-u run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-#bind -n C-i run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-#bind -n C-o run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-#bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-# keybindings to move directionally between panes
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-# source file
-bind R source-file ~/.tmux.conf
+## reload config
+bind R source-file ~/.tmux.conf \; display-message "reloaded config"
 
 # clear window name
 # use with stty sane
@@ -135,7 +74,12 @@ bind T rename-window "sane"
 
 # If tmux sees more than trigger# C0 control chars (backspace, linefeed,
 # carriage return) in 1ms, defer updates to pane for interval# ms.
-#set-option -g c0-change-trigger 250
-#set-option -g c0-change-interval 100
 set-option -g c0-change-trigger 10
 set-option -g c0-change-interval 500
+
+source-file ~/.dotfiles/tmux/conf.d/navigation.conf
+source-file ~/.dotfiles/tmux/conf.d/vim-tmux-navigator.conf
+source-file ~/.dotfiles/tmux/conf.d/theme.conf
+
+# must be last
+source-file ~/.dotfiles/tmux/conf.d/tpm.conf
