reorder aliases, fix bash history, refactor vim config more

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,7 +20,7 @@ bind-key C-Space last-window
 
 bind-key / list-commands
 # http://stackoverflow.com/questions/10543684/how-can-i-clear-scrollback-buffer-in-tmux
-bind-key -n C-k clear-history
+bind-key -n C-S-k clear-history
 
 # Turn off Esc wait time.
 set-option -sg escape-time 0
@@ -67,6 +67,8 @@ bind p paste-buffer
 
 ## reload config
 bind R source-file ~/.tmux.conf \; display-message "reloaded config"
+
+bind-key S set synchronize-panes
 
 # clear window name
 # use with stty sane
