Reorganize aliases and add some new ones

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -76,8 +76,8 @@ bind T rename-window "sane"
 
 # If tmux sees more than trigger# C0 control chars (backspace, linefeed,
 # carriage return) in 1ms, defer updates to pane for interval# ms.
-set-option -g c0-change-trigger 10
-set-option -g c0-change-interval 500
+set-window-option -g c0-change-trigger 1
+set-window-option -g c0-change-interval 1000
 
 source-file ~/.dotfiles/tmux/conf.d/navigation.conf
 source-file ~/.dotfiles/tmux/conf.d/vim-tmux-navigator.conf
