Add some more OSX changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,8 @@
 # http://mutelight.org/articles/practical-tmux
 # https://github.com/olalonde/dotfiles/blob/master/tmux.conf
 
+source-file ~/.dotfiles/tmux/tmux.reset.conf
+
 # Rebind prefix
 set-option -g prefix C-Space
 unbind-key C-b
