Update tmux navigation keys

--- a/tmux/conf.d/navigation.conf
+++ b/tmux/conf.d/navigation.conf
@@ -6,14 +6,14 @@ bind-key s split-window -c '#{pane_current_path}'
 bind-key v split-window -h -c '#{pane_current_path}'
 
 # resizing panes
-bind -r C-h resize-pane -L 1
-bind -r C-j resize-pane -D 1
-bind -r C-k resize-pane -U 1
-bind -r C-l resize-pane -R 1
-bind -r S-C-H resize-pane -L 10
-bind -r S-C-J resize-pane -D 10
-bind -r S-C-K resize-pane -U 10
-bind -r S-C-L resize-pane -R 10
+bind -r C-H resize-pane -L 1
+bind -r C-J resize-pane -D 1
+bind -r C-K resize-pane -U 1
+bind -r C-L resize-pane -R 1
+bind -r M-C-H resize-pane -L 10
+bind -r M-C-J resize-pane -D 10
+bind -r M-C-K resize-pane -U 10
+bind -r M-C-L resize-pane -R 10
 
 # swap panes
 bind -n C-M-h run-shell "tmux-swap-direction -L"
