Update tmux configuration to use powerline and misc

--- a/tmux/conf.d/navigation.conf
+++ b/tmux/conf.d/navigation.conf
@@ -1,6 +1,12 @@
 # vim: set ft=tmux
 ## navigation
 
+# Reset 
+unbind-key -n M-h
+unbind-key -n M-j
+unbind-key -n M-k
+unbind-key -n M-l
+
 # split panes
 bind-key s split-window -c '#{pane_current_path}'
 bind-key v split-window -h -c '#{pane_current_path}'
