--- a/tmux/conf.d/tpm.conf
+++ b/tmux/conf.d/tpm.conf
@@ -4,12 +4,16 @@
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-copycat        \
+  tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-continuum      \
+#  tmux-plugins/tmux-copycat        \
 '
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
+
+set -g @resurrect-strategy-vim 'session'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
