--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,7 @@ set-option -g prefix C-Space
 unbind-key C-b
 # nested multiplexers should have a different prefix, e.g. C-a
 
+bind-key ! break-pane -d
 bind-key C-c new-window
 
 # Cycle next pane
@@ -44,7 +45,7 @@ set-window-option -g mouse-select-pane on
 set-window-option -g mouse-resize-pane on
 
 # be quiet
-set-option -g visual-bell on
+set-option -g visual-bell off # let the terminal decide what to do
 set-option -g set-titles on
 bind-key x kill-pane
 
