General configuration update

--- a/tmux/conf.d/navigation.conf
+++ b/tmux/conf.d/navigation.conf
@@ -9,7 +9,7 @@ unbind-key -n M-l
 
 # split panes
 bind-key s split-window -c '#{pane_current_path}'
-bind-key v split-window -h -c '#{pane_current_path}'
+bind-key v split-window -h -p 30 -c '#{pane_current_path}'
 
 # resizing panes
 bind -r C-H resize-pane -L 1
