--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -86,7 +86,7 @@ source-file ~/.dotfiles/tmux/conf.d/navigation.conf
 source-file ~/.dotfiles/tmux/conf.d/vim-tmux-navigator.conf
 source-file ~/.dotfiles/tmux/conf.d/theme.conf
 
-if-shell 'test -f ~/.dotfiles_local/tmux/tmux.conf' source-file ~/.dotfiles_local/tmux/tmux.conf
+# if-shell 'test -f ~/.dotfiles_local/tmux/tmux.conf' source-file ~/.dotfiles_local/tmux/tmux.conf
 
 # must be last
 source-file ~/.dotfiles/tmux/conf.d/tpm.conf
