Update tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,6 +79,10 @@ bind-key S set synchronize-panes
 # use with stty sane
 bind T rename-window "sane"
 
+# continuum automatic restore, auto saved every 15 min
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '10'
+
 source-file ~/.dotfiles/tmux/conf.d/navigation.conf
 source-file ~/.dotfiles/tmux/conf.d/theme.conf
 # if-shell 'test -f ~/.dotfiles_local/tmux/tmux.conf' source-file ~/.dotfiles_local/tmux/tmux.conf
