--- a/tmux/conf.d/tpm.conf
+++ b/tmux/conf.d/tpm.conf
@@ -1,14 +1,15 @@
 # vim: set ft=tmux
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-continuum      \
-  christoomey/vim-tmux-navigator   \
-#  tmux-plugins/tmux-copycat        \
+set -g @tpm_plugins '            \
+  tmux-plugins/tpm               \
+  tmux-plugins/tmux-sensible     \
+  tmux-plugins/tmux-resurrect    \
+  tmux-plugins/tmux-continuum    \
+  Morantron/tmux-fingers         \
+  christoomey/vim-tmux-navigator \
 '
+# tmux-plugins/tmux-copycat      \
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
