--- a/tmux/conf.d/theme.conf
+++ b/tmux/conf.d/theme.conf
@@ -52,5 +52,6 @@
 # set -g window-style 'fg=colour247,bg=colour236'
 # set -g window-active-style 'fg=colour250,bg=black'
 
-run-shell "powerline-daemon -q"
-source "/home/jointly/.pyvenv/default/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+run-shell "/Users/mattshen/.pyenv/versions/global/bin/powerline-daemon -q"
+source "/Users/mattshen/.pyenv/versions/global/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+# source "/Users/mattshen/.pyenv/versions/global/lib/python2.7/site-packages/powerline/bindings/tmux/powerline_tmux_2.1_plus.conf"
