--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -39,10 +39,12 @@ set-window-option -g alternate-screen on
 set-option -g message-limit 50
 
 # mouse
-set-option -g mode-mouse on
-set-window-option -g mouse-select-window on
-set-window-option -g mouse-select-pane on
-set-window-option -g mouse-resize-pane on
+set-window-option -g mouse on
+# < v2.0
+# set-option -g mode-mouse on
+# set-window-option -g mouse-select-window on
+# set-window-option -g mouse-select-pane on
+# set-window-option -g mouse-resize-pane on
 
 # be quiet
 set-option -g visual-bell off # let the terminal decide what to do
@@ -77,15 +79,8 @@ bind-key S set synchronize-panes
 # use with stty sane
 bind T rename-window "sane"
 
-# If tmux sees more than trigger# C0 control chars (backspace, linefeed,
-# carriage return) in 1ms, defer updates to pane for interval# ms.
-set-window-option -g c0-change-trigger 1
-set-window-option -g c0-change-interval 1000
-
 source-file ~/.dotfiles/tmux/conf.d/navigation.conf
-source-file ~/.dotfiles/tmux/conf.d/vim-tmux-navigator.conf
 source-file ~/.dotfiles/tmux/conf.d/theme.conf
-
 # if-shell 'test -f ~/.dotfiles_local/tmux/tmux.conf' source-file ~/.dotfiles_local/tmux/tmux.conf
 
 # must be last
