--- a/tmux/conf.d/navigation.conf
+++ b/tmux/conf.d/navigation.conf
@@ -1,37 +1,39 @@
-# vim: set ft=tmux
-## navigation
+# # vim: set ft=tmux
+# ## navigation
 
-# Reset 
-unbind-key -n M-h
-unbind-key -n M-j
-unbind-key -n M-k
-unbind-key -n M-l
+# # Reset 
+# unbind-key -n M-h
+# unbind-key -n M-j
+# unbind-key -n M-k
+# unbind-key -n M-l
 
-# split panes
-bind-key s split-window -c '#{pane_current_path}'
-bind-key v split-window -h -p 30 -c '#{pane_current_path}'
+# # split panes
+# bind-key s split-window -c '#{pane_current_path}'
+# bind-key v split-window -h -p 30 -c '#{pane_current_path}'
 
-# resizing panes
-bind -r C-H resize-pane -L 1
-bind -r C-J resize-pane -D 1
-bind -r C-K resize-pane -U 1
-bind -r C-L resize-pane -R 1
-bind -r M-C-H resize-pane -L 10
-bind -r M-C-J resize-pane -D 10
-bind -r M-C-K resize-pane -U 10
-bind -r M-C-L resize-pane -R 10
+# # resizing panes
+# bind -r C-H resize-pane -L 1
+# bind -r C-J resize-pane -D 1
+# bind -r C-K resize-pane -U 1
+# bind -r C-L resize-pane -R 1
+# bind -r M-C-H resize-pane -L 10
+# bind -r M-C-J resize-pane -D 10
+# bind -r M-C-K resize-pane -U 10
+# bind -r M-C-L resize-pane -R 10
 
-# swap panes
-bind -n C-M-h run-shell "tmux-swap-direction -L"
-bind -n C-M-j run-shell "tmux-swap-direction -D"
-bind -n C-M-k run-shell "tmux-swap-direction -U"
-bind -n C-M-l run-shell "tmux-swap-direction -R"
+# # swap panes
+# bind -n C-M-h run-shell "tmux-swap-direction -L"
+# bind -n C-M-j run-shell "tmux-swap-direction -D"
+# bind -n C-M-k run-shell "tmux-swap-direction -U"
+# bind -n C-M-l run-shell "tmux-swap-direction -R"
 
-# navigate windows
-bind-key h previous-window
-bind-key l next-window
+# # navigate windows
+# bind-key h previous-window
+# bind-key l next-window
 
-# swap windows
-bind-key H swap-window -t -1
-bind-key L swap-window -t +2
+# # swap windows
+# bind-key H swap-window -t -1
+# bind-key L swap-window -t +2
 
+# prefix C-l is clear
+bind C-l send-keys 'C-l'
