--- a/tmux/conf.d/tpm.conf
+++ b/tmux/conf.d/tpm.conf
@@ -6,6 +6,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-sensible       \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-continuum      \
+  christoomey/vim-tmux-navigator   \
 #  tmux-plugins/tmux-copycat        \
 '
 # Other examples:
