Add git fzf and summary commands

--- a/git/aliases.cfg
+++ b/git/aliases.cfg
@@ -101,3 +101,4 @@
 	catchupfull = log --patch --reverse --topo-order _ribbon..origin/develop
 
         lastday = "!for repo in *; do (cd $repo; PAGER= git log --date=relative --since='1 day ago' --author=$(git config user.email) --stat); done"
+        lastweekend = "!for repo in *; do (cd $repo; PAGER= git log --date=relative --since='3 days ago' --author=$(git config user.email) --stat); done"
