--- a/tmux/conf.d/navigation.conf
+++ b/tmux/conf.d/navigation.conf
@@ -37,3 +37,12 @@
 
 # prefix C-l is clear
 bind C-l send-keys 'C-l'
+
+# https://woss.name/articles/tmux-new-windows-in-current-directory/#article-body
+# Set the current working directory based on the current pane's current
+# working directory (if set; if not, use the pane's starting directory)
+# when creating # new windows and splits.
+bind-key c new-window -c '#{pane_current_path}'
+bind-key '"' split-window -c '#{pane_current_path}'
+bind-key % split-window -h -c '#{pane_current_path}'
+bind-key S command-prompt "new-session -A -c '#{pane_current_path}' -s '%%'"
