Lots of changes

--- a/git/aliases.cfg
+++ b/git/aliases.cfg
@@ -4,18 +4,19 @@
         lg = log --graph --all --decorate --oneline
         lgs = log --graph --decorate --oneline
 
-        st = status
+        st = status --short
 
         cl = clone
 
-	cb = rev-parse --abbrev-ref HEAD
-	current = rev-parse --abbrev-ref HEAD
+        cb = rev-parse --abbrev-ref HEAD
+        current = rev-parse --abbrev-ref HEAD
 
-        ci = commit
+        ci = commit --verbose
         cm = commit -m
         cma = commit -a -m
         ca = commit --amend --no-edit
-        amend = commit --amend --no-edit
+        amend = commit --amend
+        cam = !git amend
         caa = commit -a --amend -C HEAD
         filelog = log -u
         fl = log -u
@@ -23,9 +24,10 @@
         ai = add --interactive
 
         co = checkout
-        br = branch 
+        br = branch
         #"!git branch -ra | grep -v done"
         bra = branch -ra
+        bd = !git-branch-delete
         #list commands
         le = log --oneline --decorate
         ll = log --pretty=format:"%C(yellow)%h%Cred%d\\ %Creset%s%Cblue\\ [%cn]" --decorate --numstat
@@ -36,15 +38,18 @@
         lnc = log --pretty=format:"%h\\ %s\\ [%cn]"
         #list all aliases
         la = "!git config -l | grep alias | cut -c 7-"
+        dh = diff --no-ext-diff HEAD
         diff = diff --word-diff
         d = diff --word-diff
         dc = diff --cached
+	cached = diff --cached
         #list modified files in last commit
         dl = "!git ll -1"
         #diff last commit
         dlc = diff --cached HEAD^
         dr  = "!f() { git diff "$1"^.."$1"; }; f"
         diffr  = "!f() { git diff "$1"^.."$1"; }; f"
+        conflicted = diff --name-only --diff-filter=U
         branch = branch -ra
 
         #reset commands
@@ -64,12 +69,19 @@
         sl = stash list
         sa = stash apply
         ss = stash save
+        spi = stash pop --index
+        sp = stash pop
+        sd = stash drop stash@{0}
+        sS = show stash@{0}
 
         cp = cherry-pick
         grep = grep -Ii
         gr = grep -Ii
         #grep from root folder
         gra = "!f() { A=$(pwd) && TOPLEVEL=$(git rev-parse --show-toplevel) && cd $TOPLEVEL && git grep --full-name -In $1 | xargs -I{} echo $TOPLEVEL/{} && cd $A; }; f"
+
+        pff = "pull --ff-only"
+        pull = '!echo "no"'
 
         #grep on filename
         f = "!git ls-files | grep -i"
@@ -100,5 +112,28 @@
 	catchup = log --patch --reverse --topo-order --first-parent -m _ribbon..origin/develop
 	catchupfull = log --patch --reverse --topo-order _ribbon..origin/develop
 
-        lastday = "!for repo in *; do (cd $repo; PAGER= git log --date=relative --since='1 day ago' --author=$(git config user.email) --stat); done"
-        lastweekend = "!for repo in *; do (cd $repo; PAGER= git log --date=relative --since='3 days ago' --author=$(git config user.email) --stat); done"
+	rc = rebase --continue
+        fpush = push --force-with-lease
+	br = branch
+	undo = reset --soft HEAD~1
+	show-patch = format-patch -1 --stdout
+	sha = rev-parse HEAD
+	origin = config --get remote.origin.url
+	out = !git log origin/$(git current)..
+	incoming = !git log ..origin/$(git current)
+	publish= !git push origin $(git current)
+	fpublish= !git push origin --force-with-lease $(git current)
+	id = !echo "git clone --recursive $(git origin) --branch $(git current)"
+	recent = !git for-each-ref --sort=-committerdate --format='%(refname:short)' refs/heads/ | head -n 20
+	fixup = "!f() { git commit --fixup=$1; git rebase -i --autosquash $1~1; }; f"
+	fixit = "!f() { git commit --fixup=$1; GIT_SEQUENCE_EDITOR=: git rebase -i --autosquash $1~1; }; f"
+	wip = !git add --all . && git commit -m 'WIP'
+	root = !pwd
+	back = checkout -
+	upstream = !git branch --set-upstream-to=origin/$(git current) $(git current)
+	repo = !git remote -v | grep '@.*fetch' | sed 's/.*:\\(.*\\).git.*/\\1/g'
+	pr = !git-pr
+
+        lastday = "!PAGER= git log --date=relative --since='1 day ago' --author=$(git config user.email) --stat"
+        lastweek = "!PAGER= git log --date=relative --since='1 week ago' --author=$(git config user.email) --stat"
+        lastweekend = "!PAGER= git log --date=relative --since='3 days ago' --author=$(git config user.email) --stat"
