--- a/tmux/conf.d/theme.conf
+++ b/tmux/conf.d/theme.conf
@@ -1,5 +1,3 @@
-# vim: set ft=tmux
-
 ## Status bar
 #set-option -g status on
 #set-option -g status-interval 5
@@ -52,6 +50,6 @@
 # set -g window-style 'fg=colour247,bg=colour236'
 # set -g window-active-style 'fg=colour250,bg=black'
 
-run-shell "/Users/mattshen/.pyenv/versions/global/bin/powerline-daemon -q"
-source "/Users/mattshen/.pyenv/versions/global/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
-# source "/Users/mattshen/.pyenv/versions/global/lib/python2.7/site-packages/powerline/bindings/tmux/powerline_tmux_2.1_plus.conf"
+run-shell "/Users/mattshen/.pyenv/shims/powerline-daemon -q"
+source "/Users/mattshen/.pyenv/versions/tools2/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
+# vim: ft=tmux
