--- a/tmux/conf.d/tpm.conf
+++ b/tmux/conf.d/tpm.conf
@@ -8,6 +8,7 @@ set -g @tpm_plugins '            \
   tmux-plugins/tmux-continuum    \
   Morantron/tmux-fingers         \
   christoomey/vim-tmux-navigator \
+  nhdaly/tmux-better-mouse-mode  \
 '
 # tmux-plugins/tmux-copycat      \
 # Other examples:
@@ -16,6 +17,8 @@ set -g @tpm_plugins '            \
 # git@bitbucket.com/user/plugin  \
 
 set -g @resurrect-strategy-vim 'session'
+# This takes a long time with long scrollbacks
+# set -g @resurrect-capture-pane-contents 'on'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
