--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,10 @@ unbind-key C-b
 bind-key ! break-pane -d
 bind-key C-c new-window
 
+# https://stackoverflow.com/a/27450841
+bind-key M-f move-pane -t '.-'
+bind-key M-F move-pane -h -t '.-'
+
 # Cycle next pane
 bind-key C-Tab select-pane -t :.+
 # toggle panes
@@ -23,7 +27,7 @@ bind-key C-Space last-window
 
 bind-key / list-commands
 # http://stackoverflow.com/questions/10543684/how-can-i-clear-scrollback-buffer-in-tmux
-bind-key -n C-S-k clear-history
+bind-key K clear-history \; display-message "cleared history"
 
 # Turn off Esc wait time.
 set-option -sg escape-time 0
@@ -32,11 +36,12 @@ set-option -sg escape-time 0
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-set-option -g history-limit 100000
+set-option -g history-limit 90000
 
 set-window-option -g alternate-screen on
 
 set-option -g message-limit 50
+set-option -g display-time 800
 
 # mouse
 set-window-option -g mouse on
@@ -73,7 +78,7 @@ bind p paste-buffer
 ## reload config
 bind R source-file ~/.tmux.conf \; display-message "reloaded config"
 
-bind-key S set synchronize-panes
+bind-key s set-window-option synchronize-panes
 
 # clear window name
 # use with stty sane
